# geul-lang

./: .gitignore  1.txt  CHANGELOG.md  LICENSE  README.en.md  README.md  STRUCTURE.md  build.py  install.bat  install.ps1  real-test.글  s05-func.글  s06-sov.글  simple-func.글  배포빌드.ps1
bench/: compile_time.py  config.ps1  run.ps1  run_comparison.py
bootstrap/: CMakeLists.txt  Makefile  build.bat  build_temp.ps1  dist_build.ps1
bootstrap/include/: ast.h  codegen.h  lexer.h  llvm_gen.h  parser.h
bootstrap/src/: ast.c  codegen.c  lexer.c  llvm_gen.c  main.c  parser.c  token.c  unicode.c
docs/: 00-초기조사-원본.md  01-연구조사.md  02-아키텍처-설계.md  03-문법-명세.md  04-컴파일-상세흐름.md  05-개발현황.md  06-빠른시작.md  07-조사와어미.md  08-컴파일러-구조.md  09-자체호스팅-로드맵.md  10-표준라이브러리.md  11-예제모음.md  12-독립컴파일러-종합로드맵.md  12_자체호스팅.md  13-구현계획-함수포인터.md  14-한글전용화-계획서.md  15-향후로드맵.md  16-자연어문법-설계.md  17-글고유최적화-연구.md  18-동적배열-설계.md  19-문자열강화-설계.md  20-에러처리-설계.md  21-리눅스ELF-설계.md  22-bug-fix-report-v0.7.2.en.md  22-버그수정보고서-v0.7.2.md  23-v0.8-설계.md  글-문법-레퍼런스-v0.5.md  글-문법사전.md  글-언어-문법서.md  글-언어-종합평가-v0.5.md  최적화-연구-v0.5.md  한국어-프로그래밍-언어-비교.md
examples/: 계산.글  구구단.글  동사문법테스트.글  버블정렬.글  실수.글  자연어_계산.글  자연어_반환.글  타입진단.글  테스트_인코딩.글  피보나치.글  한글전용_인사.글  한글종합테스트.글
src/: asm_gen.gl  ast.gl  codegen.gl  compiler.gl  elf_gen.gl  ir.gl  ir_codegen.gl  ir_transform.gl  lexer.gl  (+5 more)
부트스트랩/: CMakeLists.txt  build.bat  build.sh  compile_test.ps1  run_test.ps1  배포빌드.ps1  빌드.bat
부트스트랩/include/: llvm생성기.h  구문분석기.h  구문트리.h  유니코드.h  코드생성기.h  토큰.h  형태소분석기.h
부트스트랩/src/: llvm생성기.c  구문분석기.c  구문트리.c  유니코드.c  주.c  코드생성기.c  토큰.c  형태소분석기.c
(+255 files in other folders)
